<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="175dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/qrhunter_logo_content_desc"
        android:src="@drawable/landing_qr_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_screen_title" />

    <TextView
        android:id="@+id/landing_screen_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:text="@string/landing_screen_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/landing_screen_usernameTextFieldContainer"
        style="@style/QRHunter.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:hint="@string/landing_screen_username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/landing_screen_usernameTextField"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/landing_screen_phoneNoTextFieldContainer"
        style="@style/QRHunter.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:hint="@string/landing_screen_phone_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_screen_usernameTextFieldContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/landing_screen_phoneNoTextField"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/landing_screen_emailTextFieldContainer"
        style="@style/QRHunter.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:hint="@string/landing_screen_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_screen_phoneNoTextFieldContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/landing_screen_emailTextField"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/landing_screen_register_button"
        android:layout_width="357dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/landing_screen_register_text"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/baseline_play_arrow_24"
        app:iconGravity="textStart"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_screen_emailTextFieldContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>